fix: Adjust sidebar z-index to balance BP3 widgets
Blueprint buttons inside button groups, for example,
specify z-index 3 or 4 for some reason.

--- a/src/renderer/home/styles.scss
+++ b/src/renderer/home/styles.scss
@@ -151,7 +151,7 @@ html, body, #app {
   flex-flow: row nowrap;
   background: $panelLightBg;
   box-shadow: $pt-elevation-shadow-2;
-  z-index: 2;
+  z-index: 4;
 
   &.panelCollapsed {
     width: auto;
